Fixed About Me title not visible on webkit browsers

--- a/src/CSS/about.css
+++ b/src/CSS/about.css
@@ -14,24 +14,20 @@
   font-size: 5rem;
   font-weight: bold;
   line-height: 1.0062em;
-  background-image: linear-gradient(
+  background: -webkit-linear-gradient(
     to right,
     #16222a 0%,
     #3a6073 51%,
     #16222a 100%
   );
-  background-image: -webkit-linear-gradient(
+  background: -moz-linear-gradient(
     to right,
     #16222a 0%,
     #3a6073 51%,
     #16222a 100%
   );
-  background-image: -moz-linear-gradient(
-    to right,
-    #16222a 0%,
-    #3a6073 51%,
-    #16222a 100%
-  );
+  background: linear-gradient(to right, #16222a 0%, #3a6073 51%, #16222a 100%);
+
   background-clip: text;
   background-size: 300%;
   -webkit-background-clip: text;
